welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (die1==die2&&noDoubles=true) {
                      ^withoutDoubles:7: error: type mismatch;
 found   : Unit
 required: Int
			if (die2==6) {return 1}
                        ^withoutDoubles:5: error: type mismatch;
 found   : Unit
 required: Int
	if (die1==die2&&noDoubles=true) {
        ^